--- a/apiMonitoring/views/login.ejs
+++ b/apiMonitoring/views/login.ejs
@@ -19,6 +19,8 @@
                     <input class="username-login" name = "username_login" type="text" placeholder="Username">
                     <input class="password-login" name = "password_login" type="password" placeholder="Password">
                     <a href="#"><p>Forgot password?</p></a>
+                    <span>No account yet? <a href="/signup">Register</a></span>
+                    <br>
                     <button type="submit" class="btn btn-primary btn-sign-in">Submit</button>
                     <h6>OR</h6>
                     <div class="login-other-way">
