--- a/apiMonitoring/views/runCollection.ejs
+++ b/apiMonitoring/views/runCollection.ejs
@@ -67,9 +67,9 @@
                               <span>ms</span>
                               <br>
                               <select class="selectpicker" multiple data-max-options="2">
-                                <option value="alert">alert when error</option>
-                                <option value="finish each iteration">report each iteration</option>
-                                <option value="finish all iteration">report after finish all iteration</option>
+                                <option value="alert">Alert when error occur</option>
+                                <option value="finish each iteration">Report after each iteration</option>
+                                <option value="finish all iteration">Report after finishing all iterations</option>
                               </select>
                               <br>
                               <input type="submit" class="btn-primary btn-runCollection" style="height: 50px; width: 50%; margin-bottom: 40px;margin-top: 40px; font-weight: 600; border-radius: 5px;" value="Run <%=apiList[0].casetest %>"></button>
@@ -114,6 +114,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.8.1/js/bootstrap-select.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
       <script language="javascript" src="/javascripts/supCollection.js"></script>
+      <script language="javascript" src="/javascripts/supMainPage.js"></script>
+      <script language="javascript" src="/javascripts/collection.js"></script>
   </body>
   
 </html>
