--- a/apiMonitoring/views/collectionResult.ejs
+++ b/apiMonitoring/views/collectionResult.ejs
@@ -49,15 +49,10 @@
                     <p id="delay" style="color: rgb(173, 173, 173); font-weight: 600; margin-left: 5%; margin-top: -15px;"> <%=delay %> ms </p>
                   </div>
                   <div class="col-4">
-                    <p id="eventEmail"><%= eventEmail %></p>
+                    <p id="eventEmail" style="display: none;"><%= eventEmail %></p>
                   </div>
                   <div class="col-3">
                     <button class="btn-export" style="margin-top: 15px; background-color: rgb(35, 65, 240); height: 50px; color: white;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);">export json</button>
-                    <span>
-                      <a href="/sendEmail">
-                        <button style="margin-left: 20px; background-color: rgb(255, 145, 71);height: 50px;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);" >Gửi email</button>
-                      </a>
-                    </span>
                     <span>
                       <button style="margin-left: 20px; background-color: rgb(199, 241, 10);height: 50px;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);" >Đồ thị</button>
                     </span>
