--- a/apiMonitoring/views/header.ejs
+++ b/apiMonitoring/views/header.ejs
@@ -7,11 +7,11 @@
                 <span class="glyphicon glyphicon-plus"></span> New
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <button class="dropdown-item btn-import-collection" type="button" data-toggle="collapse" data-target="#ModalImportCollection">import collection</button>
+                <button class="dropdown-item btn-import-collection" type="button" data-toggle="collapse" data-target="#ModalImportCollection">Import collection</button>
                 <hr>
-                <button class="dropdown-item" type="button">get request</button>
-                <hr>
-                <button class="dropdown-item" type="button">Something..</button>
+                <button class="dropdown-item" type="button">Get request</button>
+                <!-- <hr>
+                <button class="dropdown-item" type="button">Something..</button> -->
               </div>
             </div>
             <a href="/home" style="color: white; font-weight: 600; font-size: 20px;">Home</a>
