push to merge code

--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -118,7 +118,7 @@
           </div>
           <div class="col-sm-9" style="background-color: #FFFFFF; height: 100%;">
             <h3 style="margin-top: 15px;">Name Test</h3>
-            <form id="form1" method="POST" action="/home" enctype = "multipart/form-data">
+            <form id="form1" method="POST" action="/callApi" enctype = "multipart/form-data">
               <select id="idMethod" name="method" style="background-color: #FFF; border-radius: 5px 0px 0px 5px; height: 27px;width: 80px;">
                 <option value="get">GET</option>
                 <option value="post">POST</option>
