--- a/apiMonitoring/views/login.ejs
+++ b/apiMonitoring/views/login.ejs
@@ -14,7 +14,7 @@
               <div class="col-3">
               </div>
               <div class="col-6">
-                <form class="form-sign-in" method="POST">
+                <form class="form-sign-in" action="/login"method="POST">
                     <h4>Sign in</h4>
                     <input class="username-login" name = "username_login" type="text" placeholder="Username">
                     <input class="password-login" name = "password_login" type="password" placeholder="Password">
