--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -219,7 +219,7 @@
                   </div>
                   <hr>
                   <div class="form-footer">
-                    <button type="button" class="btn btn-primary import-collection">Continute</button>
+                    <button type="button" class="btn btn-primary import-collection">Continue</button>
                     <button type="button" class="btn btn-secondary close-modal">Cancel</button>
                   </div>
                 </div>
